cabal-version: 1.12

name:           Strat
version:        0.1.0.0
synopsis:       Haskell Strategy Game Library WIP
description:    Please see README.md
category:       Strategy game library
homepage:       http://github.com/marklnichols/Haskell-Strategy-Game-AI-WiP#readme
bug-reports:    https://github.com/marklnichols/Haskell-Strategy-Game-AI-WiP/issues
author:         Mark Nichols
maintainer:     marklnichols@gmail.org
copyright:      GPL
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/marklnichols/Haskell-Strategy-Game-AI-WiP

library
  exposed-modules:
      Strat.Helpers
      Strat.ZipTree
      Strat.StratTree.TreeNode
      Strat.StratIO
  other-modules:
      Paths_Strat
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base
    , aeson
    , containers
    , extra
    , hashmap
    , lens
    , mtl
    , mutable
    , random
    , rosezipper
    , safe
    , singletons == 2.7
    , sort
    , vector
  default-language: Haskell2010

executable strat-exe
  main-is: Main.hs
  other-modules:
      Checkers CheckersJson CheckersText Chess  ChessText Parser8By8 GameRunner Strat.Helpers Strat.StratIO Strat.ZipTree Strat.StratTree.TreeNode StratWeb.WebRunner StratWeb.YesodMain
  hs-source-dirs:
      main/Strat-commandline
      src
      src/Examples/Utils
      src/Examples/Checkers
      src/Examples/WIP/Chess
  ghc-options: -threaded -rtsopts -O2 -Wall
  build-depends:
      aeson
    , base
    , bytestring
    , Cabal
    , cmdargs
    , containers
    , extra
    , hashmap
    , lens
    , mtl
    , mutable
    , parsec
    , random
    , rosezipper
    , safe
    , singletons == 2.7
    , sort
    , text
    , vector
    , yesod
    , yesod-core
    , yesod-static
  default-language: Haskell2010

executable test-as-exe
  main-is: Main.hs
  other-modules:
      Checkers
      CheckersJson
      CheckersTest
      CheckersText
      Chess
      ChessText
      ChessTest
      Parser8By8
      TicTac.TTParser
      TicTac.TTGame
      TicTac.TTParser
      TicTacTest
      Parser8By8
      GameRunner
      PruningTest
      StratTreeTest
      Strat.Helpers
      Strat.StratIO
      Strat.ZipTree
      Strat.StratTree.TreeNode
      StratWeb.WebRunner
      StratWeb.YesodMain
  hs-source-dirs:
      main/Strat-commandline
      src
      src/Examples/Utils
      src/Examples/Checkers
      src/Examples/WIP/Chess
      test
  ghc-options: -Wall
  build-depends:
      aeson
    , base
    , bytestring
    , Cabal
    , cmdargs
    , containers
    , extra
    , hashmap
    , hspec
    , hspec-expectations
    , lens
    , mtl
    , mutable
    , parsec
    , random
    , rosezipper
    , safe
    , sort
    , text
    , singletons == 2.7
    , unordered-containers
    , vector
    , yesod == 1.6.0.2
    , yesod-core
    , yesod-static
  default-language: Haskell2010

test-suite StratTreeTest
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  other-modules:
      Checkers
      CheckersJson
      CheckersTest
      Chess
      ChessTest
      Parser8By8
      GameRunner
      PruningTest
      Strat.Helpers
      StratTreeTest
      Strat.ZipTree
      Strat.StratTree.TreeNode
      TicTac.TTGame
      TicTac.TTParser
      TicTacTest
  hs-source-dirs:
      test
      src
      src/Examples/Utils
      src/Examples/Checkers
      src/Examples/WIP/Chess
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      Strat
    , aeson
    , base
    , bytestring
    , cmdargs
    , containers
    , extra
    , hashmap
    , hspec
    , hspec-expectations
    , lens
    , mtl
    , mutable
    , parsec
    , random
    , rosezipper
    , safe
    , sort
    , singletons == 2.7
    , unordered-containers
    , vector
  default-language: Haskell2010
