cabal-version: 3.6

name:           Strat
version:        0.1.0.0
synopsis:       Haskell Strategy Game Library WIP
description:    Please see README.md
category:       Strategy game library
homepage:       http://github.com/marklnichols/Haskell-Strategy-Game-AI-WiP#readme
bug-reports:    https://github.com/marklnichols/Haskell-Strategy-Game-AI-WiP/issues
author:         Mark Nichols
maintainer:     marklnichols@gmail.org
copyright:      GPL
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/marklnichols/Haskell-Strategy-Game-AI-WiP

library
  exposed-modules:
      Strat.Helpers
      Strat.ZipTree
      Strat.StratTree.TreeNode
      Strat.StratIO
  other-modules:
      Paths_Strat
  hs-source-dirs:
      src
  ghc-options: -Wdefault
  build-depends:
                base
                , aeson
                , async
                , base
                , bytestring
                , cmdargs >= 0.10.21
                , containers
                , extra
                , hashable
                , hashmap
                , lens
                , mtl
                , random
                , rosezipper
                , safe
                , singletons
                , singletons-base
                , sort
                , text
                , threads
                , unordered-containers
                , vector
                , simple-logger

executable strat-exe
  main-is: Main.hs
  other-modules:
      Checkers
      CheckersJson
      CheckersText
      Chess
      ChessText
      FenParser
      GameRunner
      MegaParser8By8
      Strat.Helpers
      Strat.StratIO
      Strat.ZipTree
      Strat.StratTree.TreeNode
      StratWeb.WebRunner
      StratWeb.YesodMain
  hs-source-dirs:
      src
      src/Examples/Utils
      src/Examples/Checkers
      src/Examples/WIP/Chess
      src/Strat
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -feager-blackholing -Wdefault
  build-depends:  aeson
                , async
                , Cabal
                , base
                , bytestring
                , cmdargs
                , cmdargs >= 0.10.21
                , containers
                , extra
                , hashable
                , hashmap
                , lens
                , mtl
                , parsec
                , megaparsec
                , random
                , rosezipper
                , safe
                , singletons
                , singletons-base
                , sort
                , threads
                , unordered-containers
                , text
                , vector
                , simple-logger
                , yesod
                , yesod-core
                , yesod-static

executable test-as-exe
  main-is: Main.hs
  other-modules:
      Checkers
      CheckersJson
      CheckersTest
      CheckersText
      Chess
      ChessTest
      ChessText
      FenParser
      FenTest
      GameRunner
      MegaParser8By8
      TicTac.TTParser
      TicTac.TTGame
      TicTacTest
      PruningTest
      StratTreeTest
      Strat.Helpers
      Strat.StratIO
      Strat.ZipTree
      Strat.StratTree.TreeNode
      StratWeb.WebRunner
      StratWeb.YesodMain
  hs-source-dirs:
      src
      src/Examples/Utils
      src/Examples/Checkers
      src/Examples/WIP/Chess
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -feager-blackholing -Wdefault
  build-depends:
                  aeson
                , async
                , Cabal
                , base
                , bytestring
                , cmdargs
                , cmdargs >= 0.10.21
                , containers
                , extra
                , hashable
                , hashmap
                , hspec
                , hspec-expectations
                , lens
                , mtl
                , parsec
                , megaparsec
                , random
                , rosezipper
                , safe
                , singletons
                , singletons-base
                , sort
                , text
                , threads
                , unordered-containers
                , vector
                , simple-logger
    , yesod
    , yesod-core
    , yesod-static

test-suite StratTreeTest
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  other-modules:
      Checkers
      CheckersJson
      CheckersTest
      Chess
      ChessTest
      FenParser
      FenTest
      MegaParser8By8
      GameRunner
      PruningTest
      Strat.Helpers
      Strat.StratIO
      StratTreeTest
      Strat.ZipTree
      Strat.StratTree.TreeNode
      TicTac.TTGame
      TicTac.TTParser
      TicTacTest
  hs-source-dirs:
      test
      src
      src/Examples/Utils
      src/Examples/Checkers
      src/Examples/WIP/Chess
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -feager-blackholing -Wdefault
  build-depends:
                  Strat
                , aeson
                , async
                , base
                , bytestring
                , cmdargs
                , cmdargs >= 0.10.21
                , containers
                , extra
                , hashable
                , hashmap
                , hspec
                , hspec-expectations
                , lens
                , mtl
                , parsec
                , megaparsec
                , random
                , rosezipper
                , safe
                , singletons
                , singletons-base
                , sort
                , text
                , threads
                , unordered-containers
                , vector
                , simple-logger
